kuber/bonfire-v1-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonfire-v1-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular-app
        image: kennykankush/angular-frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bonfire-v1-frontend-service
spec:
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
