kuber/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls: 
    - hosts: 
        - www.bonfire.show
      secretName: quickstart-example-tls
  rules:
    - host: www.bonfire.show
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bonfire-v1-frontend-service
                port:
                  number: 80
